lorm-macros/tests/compile_fail/unknown_key_in_has_many.rs
use lorm::ToLOrm;
use sqlx::FromRow;
use uuid::Uuid;

#[derive(Debug, Default, Clone, FromRow, ToLOrm)]
#[lorm(has_many(Post, unknown = "x"))]
pub struct User {
    #[lorm(pk)]
    pub id: Uuid,
}

fn main() {}
